--- a/index.html
+++ b/index.html
@@ -5,10 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Practice</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    
+    <link rel="stylesheet" href="css/bootstrap/css/bootstrap-grid.min.css">
+   
 </head>
 <body>
     <h2>Hello Bootstrap</h2>
-    
+    <h3>Buttons</h3>
+    <button class="btn btn-primary">Click Here</button>
+    <button class="btn btn-secondary">Click Here</button>
+    <button class="btn btn-success">Click Here</button>
+    <button class="btn btn-danger">Click Here</button>
+
+    <h3>Colors</h3>
+    <p class="text-primary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut autem excepturi dignissimos ipsa dicta perspiciatis placeat reprehenderit ex, eaque delectus?</p>
+    <p class="text-danger">This is dangerous</p>
+    <h3>Background</h3>
+    <div class="bg-primary text-white">
+        <h4>My News</h4>
+        <p>I am learning Bootstrap</p>
+    </div>
+    <div class="bg-info text-dark">
+        <h4>My Hobby</h4>
+        <p> My hobby is scrolling facebook </p>
+    </div>
+  
 </body>
 </html>
