--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Practice</title>
     
-    <link rel="stylesheet" href="css/bootstrap/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="css/bootstrap/css/bootstrap.min.css">
    
 </head>
 <body>
@@ -29,6 +29,58 @@
         <h4>My Hobby</h4>
         <p> My hobby is scrolling facebook </p>
     </div>
+    <h3>Images </h3>
+    <div class="bg-primary">
+        <img class="img-fluid w-50 rounded-circle img-thumbnail " src="images/food.jpg" alt="">
+    <img class="img-fluid w-25 rounded-circle " src="images/download.jpg" alt="">
+    </div>
+    <h3>Cards</h3>
+    <div class="card" style="width: 18rem;">
+        <img src="images/food.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Healthy Food</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Buy now</a>
+        </div>
+      </div>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/FB_IMG_1616244736246.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Thinking</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/FB_IMG_1616249836754.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Cosmos flowers</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/FB_IMG_1617512882222.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Relax</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+          </div>
+        </div>
+      </div>
   
 </body>
 </html>
